'origin/main'  # Please enter a commit message to explain why this merge is necessary,

--- a/Master_Dataset_Results_Complete.ipynb
+++ b/Master_Dataset_Results_Complete.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import linear_regression as lr\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -46,13 +46,13 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(r'C:\\Users\\bradl\\OneDrive\\Desktop\\Final_Project_ML_Slender\\Cleaned_Datasets\\Master_Dataset_Cleaned.csv')\n",
+    "df = pd.read_csv(r'/workspaces/Nursing-Home-Analysis/Master_Dataset_Cleaned.csv')\n",
     "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -201,8 +201,8 @@
      "text": [
       "Train Score 1.0\n",
       "Test Score 1.0\n",
-      "Best Parameters {'max_depth': 2, 'min_samples_leaf': 0.03, 'n_estimators': 50}\n",
-      "Features [0.28578825 0.09369803 0.61747133 0.00304239]\n"
+      "Best Parameters {'max_depth': 3, 'min_samples_leaf': 0.015, 'n_estimators': 60}\n",
+      "Features [0.38790193 0.10435684 0.50357146 0.00416977]\n"
      ]
     }
    ],
@@ -221,17 +221,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of Nursing Home Residents: 0.2857882455062531\n",
-      "Number of Nursing Facilities: 0.09369803149664481\n",
-      "Total Number of Beds: 0.6174713285822355\n",
-      "State_encoded: 0.0030423944148666067\n"
+      "Number of Nursing Home Residents: 0.3879019293605265\n",
+      "Number of Nursing Facilities: 0.10435684177736447\n",
+      "Total Number of Beds: 0.5035714610243769\n",
+      "State_encoded: 0.004169767837732246\n"
      ]
     }
    ],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
        "50                           0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -965,16 +965,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{4: 'Tennessee', 3: 'West Virginia', 1: 'North Carolina', 2: 'New Jersey'}"
+       "{4: 'Connecticut', 3: 'Idaho', 1: 'Massachusetts', 2: 'New Jersey'}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +985,7 @@
     "for cluster, states in cluster_states.items():\n",
     "    cluster_data = df[df['State'].isin(states)]\n",
     "    cluster_median = cluster_data['Investment_Attractiveness_Score'].median()\n",
-    "    closest_state = cluster_data.iloc[(cluster_data['Investment_Attractiveness_Score'] - cluster_mean).abs().argsort()[:1]]['State'].values[0]\n",
+    "    closest_state = cluster_data.iloc[(cluster_data['Investment_Attractiveness_Score'] - cluster_median).abs().argsort()[:1]]['State'].values[0]\n",
     "    closest_states[cluster] = closest_state\n",
     " \n",
     "closest_states"
@@ -1015,7 +1015,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
