--- a/Results/Master_Dataset_Results.ipynb
+++ b/Results/Master_Dataset_Results.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,8 @@
     }
    ],
    "source": [
-    "df.info()"
+    "df.info()\n",
+    "x = 5"
    ]
   },
   {
