--- a/Results/Master_Dataset_Results.ipynb
+++ b/Results/Master_Dataset_Results.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\bradl\\AppData\\Local\\Temp\\ipykernel_20140\\1511757096.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -17,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,13 +55,13 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(r'C:\\Users\\bradl\\OneDrive\\Desktop\\Final_Project_ML_Slender\\Cleaned_Datasets\\Master_Dataset_Cleaned.csv')\n",
+    "df = pd.read_csv(r'C:\\Users\\bradl\\OneDrive\\Documents\\GitHub\\Nursing-Home-Analysis\\Data\\Master_Dataset_Cleaned.csv')\n",
     "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -81,9 +96,7 @@
     }
    ],
    "source": [
-    "df.info()\n",
-    "x = 5\n",
-    "df.head()"
+    "df.info()"
    ]
   },
   {
@@ -110,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
